fix part 1/2 responsive footer overflow bug

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -312,14 +312,14 @@ header {
 
 footer {
   position: relative;
-  height: 100px;
   background-color: rgb(52, 52, 51);
   color: rgb(201, 201, 201);
   z-index: 101;
 }
 
 footer p {
-  padding-top: 15px;
+  padding-top: 30px;
+  padding-bottom: 10px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -327,10 +327,11 @@ footer p {
 .footer-logo {
   position: relative;
   text-align: center;
+  width: 50px;
 }
 
 .footer-logo img {
-  margin-top: 5px;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
 }
